@@ -5,4 +5,5 @@ group(:test) do
   gem 'capybara-webkit'
   gem 'rspec'
   gem 'launchy'
+	gem 'mysql'
 end
